examples/test/testpolicy40.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy40
  namespace: namespace379
spec:
  podSelector:
    matchLabels:
      key19: value15
      key30: value24
      key28: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value19
          key9: value39
          key26: value13
      podSelector:
        matchLabels:
          key34: value20
          key15: value9
          key2: value35
